# AutoRed

./: .gitignore  AUTORED_FULL_SUMMARY.md  AUTORED_IMPLEMENTATION_PLAN.md  AUTO_RED_COMPREHENSIVE.md  AutoRed_Deep_Analysis.docx  CHANGES_SUMMARY.md  GEMINI.md  IMPROVEMENTS.md  PLAN_EVALUATION.md  benchmark.err  llama_response_1.txt  llama_response_2.txt  llama_response_3.txt  main.py  output.txt  pyproject.toml  requirements_minimal.txt  requirements_qlo.txt  requirements_server.txt  test.txt  test_1.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
.qwen/: settings.json  settings.json.orig
data/: GENERATOR_DATASET_V1_REPORT.md  analysis_report_v1.md  augmentation_plan.json  augmentation_samples_v1.jsonl  autored_failures_v1.jsonl  autored_positive_v1.jsonl  autored_successes_metadata.json  autored_successes_v1.jsonl  autored_verified_v1.jsonl  benchmark_v1.jsonl  benchmark_v1_metadata.json  diversity_report.json  evaluate_benchmark.py  generator_audit_v1.jsonl  generator_augmented_v1.jsonl  generator_augmented_v1_metadata.json  generator_augmented_v2.jsonl  generator_augmented_v2_metadata.json  generator_clean_v1_report.json  generator_gold_v1.jsonl  generator_stats.json  low_quality_review.jsonl  manual_review_queue_v1.jsonl  removed_duplicates.jsonl  score_distribution.json  tensortrust_classified_v1.jsonl  tensortrust_clean_v1.jsonl  tensortrust_gen_raw_v1.jsonl
experiment/: GEMINI.md  benchmark.sh  llama_2_7b.ipynb  llama_3_8b-1.py  llama_3_8b.ipynb  llama_3_8b.py  llama_3_8b_verbose copy.py  llama_3_8b_verbose.py
(+624 files in other folders)
