[project]
name = "autored"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "hf>=1.11.0",
    "ipykernel>=7.2.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
    "torch>=2.6.0,<2.7.0",
    "transformers>=4.37",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
